update tanggal 25 Maret 19

--- a/admin gudang/tambah_surat_jalan.html
+++ b/admin gudang/tambah_surat_jalan.html
@@ -766,7 +766,7 @@
 			//== Demos
 			var initDemos = function() {
 
-				$('#btn_terbitkan_spk').click(function(e) {
+				$('#btn_terbitkan_surat_jalan').click(function(e) {
 					swal("Surat Jalan Telah Terbit!", "Surat Jalan yang anda buat telah terbit","success");
 				});
 				$('#btn_tambah_item').click(function(e) {
