--- a/admin toko/index.html
+++ b/admin toko/index.html
@@ -255,27 +255,27 @@
 								</span>
 							</a>
 						</li>
-						<!-- Harga -->
+						<!-- Harga Item dan Jasa -->
 						<li class="m-menu__item" aria-haspopup="true" >
 							<a  href="harga_item.html" class="m-menu__link ">
 								<i class="m-menu__link-icon la la-list"></i>
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">
-											Harga Item
+											Harga Item dan Jasa
 										</span>
 									</span>
 								</span>
 							</a>
 						</li>
-						<!-- Nota -->
+						<!-- Management Pembayaran -->
 						<li class="m-menu__item" aria-haspopup="true" >
 							<a  href="nota.html" class="m-menu__link ">
 								<i class="m-menu__link-icon flaticon-file-1"></i>
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">
-											Nota
+											Management Pemabayaran
 										</span>
 									</span>
 								</span>
