--- a/admin toko/rincian_nota.html
+++ b/admin toko/rincian_nota.html
@@ -290,14 +290,14 @@
 								</span>
 							</a>
 						</li>
-						<!-- Nota -->
+						<!-- Management Pembayaran -->
 						<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
 							<a  href="nota.html" class="m-menu__link ">
 								<i class="m-menu__link-icon flaticon-file-1"></i>
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">
-											Nota
+											Management Pembayaran
 										</span>
 									</span>
 								</span>
@@ -365,12 +365,9 @@
 					<div class="col-xl-12">
 						<div class="m-portlet m-portlet--mobile">
 							<div class="m-portlet__head header">
-								<h2 style="margin-top: 30px" align="center" class="header-pesanan">
-									Nota Sukses Sejuk Mandiri
+								<h2 style="margin-top: 30px" align="left" class="header-pesanan">
+									Invoice Sukses Sejuk Mandiri
 								</h2><br>
-								<h3 name="no_surat_jalan" class="header-pesanan-no"> 
-									<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
-								</h3><br><br>
 								<div class="info row">
 									<div class="col-sm">
 										<p id="tanggal_surat">
@@ -386,6 +383,9 @@
 									<div class="col-sm">
 										<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
 										<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
+										<p>
+											No Invoice : <span id="no_invoice">123123123</span>
+										</p>
 									</div>
 								</div>	
 							</div>
