--- a/admin toko/rincian_spk_pemasangan.html
+++ b/admin toko/rincian_spk_pemasangan.html
@@ -376,34 +376,45 @@
 								</table>
 								<!--end: Datatable -->
 							</div>
-							<div class="m-portlet__body">
-								<h4 class="m-subheader__title m-subheader__title--separator">
-									Gambar Pemasangan
-								</h4>
-								<div class="row">
-									<div class="heading col-sm">
-										<h5 align="center">Sebelum</h5>
+							<div class="m-portlet__body gambar_pemasangan">
+								<div class="m-accordion__item">
+									<div class="m-accordion__item-head collapsed" role="tab" id="m_accordion_1_item_3_head" data-toggle="collapse" href="#m_accordion_1_item_3_body" aria-expanded="    false">
+										<span class="m-accordion__item-title">
+											<button class="btn btn-primary">
+												Lihat Gambar Pemasangan
+											</button>
+										</span>
+										<span class="m-accordion__item-mode"></span>
 									</div>
-									<div class="heading col-sm">
-										<h5 align="center">Sesudah</h5>
-									</div>
-								</div>
-								<div id="item[0]" class="row">
-									<div class=" col-sm">
-										<img name="gambar_sebelum" class="gambar" src="https://s1.bukalapak.com/img/1376695601/w-1000/LG_AC_INVERTER_3_4_PK_T08EMV1_TERMURAH.jpg">
-										
-									</div>
-									<div class=" col-sm">
-										<img name="gambar_sesudah" class="gambar" src="https://s1.bukalapak.com/img/1376695601/w-1000/LG_AC_INVERTER_3_4_PK_T08EMV1_TERMURAH.jpg">
-										
-									</div>
-								</div>
-								<div id="item[1]" class="row">
-									<div class=" col-sm">
-										<img name="gambar_sebelum" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
-									</div>
-									<div class=" col-sm">
-										<img name="gambar_sesudah" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
+									<div class="m-accordion__item-body collapse" id="m_accordion_1_item_3_body" class=" " role="tabpanel" aria-labelledby="m_accordion_1_item_3_head" data-parent="#m_accordion_1">
+										<div class="m-accordion__item-content">
+											<div class="row">
+												<div class="heading col-sm">
+													<h5 align="center">Sebelum</h5>
+												</div>
+												<div class="heading col-sm">
+													<h5 align="center">Sesudah</h5>
+												</div>
+											</div>
+											<div id="item[0]" class="row">
+												<div class=" col-sm">
+													<img name="gambar_sebelum" class="gambar" src="https://s1.bukalapak.com/img/1376695601/w-1000/LG_AC_INVERTER_3_4_PK_T08EMV1_TERMURAH.jpg">
+
+												</div>
+												<div class=" col-sm">
+													<img name="gambar_sesudah" class="gambar" src="https://s1.bukalapak.com/img/1376695601/w-1000/LG_AC_INVERTER_3_4_PK_T08EMV1_TERMURAH.jpg">
+
+												</div>
+											</div>
+											<div id="item[1]" class="row">
+												<div class=" col-sm">
+													<img name="gambar_sebelum" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
+												</div>
+												<div class=" col-sm">
+													<img name="gambar_sesudah" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
