--- a/admin toko/rincian_spk_komplain.html
+++ b/admin toko/rincian_spk_komplain.html
@@ -16,7 +16,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>
-		Admin Toko | Nota
+		Admin Toko | Rincian SPK Komplain
 	</title>
 	<meta name="description" content="Latest updates and statistic charts">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,7 +44,11 @@
 	<!-- end:: Style tambahan -->
 	<!--end::Base Styles -->
 	<link rel="shortcut icon" href="../assets/demo/default/media/img/logo/favicon.ico" />
-	<script src="http://localhost:35729/livereload.js"></script>
+	<style>
+		.m-datatable.m-datatable--default > .m-datatable__pager > .m-datatable__pager-info {
+			display: none !important;
+		}
+	</style>
 </head>
 <!-- end::Head -->
 <!-- end::Body -->
@@ -133,7 +137,7 @@
 					<!-- ASIDE MENU DISINI -->
 					<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
 						<!-- DASHBOARD -->
-						<li class="m-menu__item  " aria-haspopup="true" >
+						<li class="m-menu__item " aria-haspopup="true" >
 							<a  href="index.html" class="m-menu__link ">
 								<i class="m-menu__link-icon flaticon-line-graph"></i>
 								<span class="m-menu__link-title">
@@ -146,7 +150,7 @@
 							</a>
 						</li>
 						<!-- List SPK -->
-						<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
+						<li class="m-menu__item  m-menu__item--submenu m-menu__item--open m-menu__item--expanded" aria-haspopup="true" data-menu-submenu-toggle="hover">
 							<a href="#" class="m-menu__link m-menu__toggle">
 								<i class="m-menu__link-icon flaticon-folder-2"></i>
 								<span class="m-menu__link-text">
@@ -164,7 +168,7 @@
 											</span>
 										</span>
 									</li>
-									<li class="m-menu__item " aria-haspopup="true">
+									<li class="m-menu__item  " aria-haspopup="true">
 										<a href="spk_pemasangan.html" class="m-menu__link ">
 											<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 												<span></span>
@@ -194,7 +198,7 @@
 											</span>
 										</a>
 									</li>
-									<li class="m-menu__item " aria-haspopup="true">
+									<li class="m-menu__item m-menu__item--active" aria-haspopup="true">
 										<a href="spk_komplain.html"  class="m-menu__link ">
 											<i class="m-menu__link-bullet m-menu__link-bullet--dot">
 												<span></span>
@@ -231,52 +235,13 @@
 							</a>
 						</li>
 						<!-- Pelanggan -->
-						<li class="m-menu__item  " aria-haspopup="true" >
+						<li class="m-menu__item " aria-haspopup="true" >
 							<a  href="pelanggan.html" class="m-menu__link ">
 								<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">
 											Pelanggan
-										</span>
-									</span>
-								</span>
-							</a>
-						</li>
-						<!-- Stock -->
-						<li class="m-menu__item" aria-haspopup="true" >
-							<a  href="stock.html" class="m-menu__link ">
-								<i class="m-menu__link-icon flaticon-list-1"></i>
-								<span class="m-menu__link-title">
-									<span class="m-menu__link-wrap">
-										<span class="m-menu__link-text">
-											Stock
-										</span>
-									</span>
-								</span>
-							</a>
-						</li>
-						<!-- Harga -->
-						<li class="m-menu__item" aria-haspopup="true" >
-							<a  href="harga_item.html" class="m-menu__link ">
-								<i class="m-menu__link-icon la la-list"></i>
-								<span class="m-menu__link-title">
-									<span class="m-menu__link-wrap">
-										<span class="m-menu__link-text">
-											Harga Item
-										</span>
-									</span>
-								</span>
-							</a>
-						</li>
-						<!-- Management Pembayaran -->
-						<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
-							<a  href="nota.html" class="m-menu__link ">
-								<i class="m-menu__link-icon flaticon-file-1"></i>
-								<span class="m-menu__link-title">
-									<span class="m-menu__link-wrap">
-										<span class="m-menu__link-text">
-											Management Pembayaran
 										</span>
 									</span>
 								</span>
@@ -293,7 +258,7 @@
 					<div class="d-flex align-items-center">
 						<div class="mr-auto">
 							<h3 class="m-subheader__title m-subheader__title--separator">
-								Nota
+								Rincian SPK Pemasangan
 							</h3>
 							<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 								<li class="m-nav__item m-nav__item--home">
@@ -305,9 +270,29 @@
 									-
 								</li>
 								<li class="m-nav__item">
-									<a href="nota.html" class="m-nav__link">
+									<a href="#.html" class="m-nav__link">
 										<span class="m-nav__link-text">
-											Nota
+											List SPK
+										</span>
+									</a>
+								</li>
+								<li class="m-nav__separator">
+									-
+								</li>
+								<li class="m-nav__item">
+									<a href="spk_pemasangan.html" class="m-nav__link">
+										<span class="m-nav__link-text">
+											SPK Pemasangan
+										</span>
+									</a>
+								</li>
+								<li class="m-nav__separator">
+									-
+								</li>
+								<li class="m-nav__item">
+									<a href="rincian_spk_pemasangan.html" class="m-nav__link">
+										<span class="m-nav__link-text">
+											Rincian
 										</span>
 									</a>
 								</li>
@@ -333,221 +318,43 @@
 				<div class="row">
 					<div class="col-xl-12">
 						<div class="m-portlet m-portlet--mobile">
+							<div class="m-portlet__head header">
+								<h3 class="header-pesanan">
+								</h3><br>
+								<h3 name="no_surat_jalan" class="header-pesanan-no"> 
+									<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
+								</h3><br><br>
+								<div class="info row">
+									<div class="col-sm">
+										<p id="tanggal_surat">
+											<i class="flaticon-calendar-2"> </i>20/11/19
+										</p> 
+										<p id="nama_pelanggan">
+											<i class="flaticon-users"> </i> Ahmad Rifaldi
+										</p>
+										<p id="no_telpon">
+											<i class="fa fa-phone"> </i> 085-145-322-137
+										</p>
+										<p>
+											Tanggal Mulai : 
+											<span id="tgl_mulai">
+											23/03/19 10.10</span>
+										</p>
+										<p>
+											Tanggal Selesai : <span id="tgl_selesai">25/03/19 11.15</span>
+										</p>
+									</div>
+									<div class="col-sm">
+										<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
+										<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
+										<p>Teknisi : <span id="nama_teknisi">Ridwan</span></p>
+										<p>Status : <span id="status_spk">Selesai</span></p>
+									</div>
+								</div>	
+							</div>
 							<div class="m-portlet__body">
-								<ul class="nav nav-pills" role="tablist">
-									<li class="nav-item">
-										<a class="nav-link active" data-toggle="tab" href="#m_tabs_list_request">
-											Request
-										</a>
-									</li>
-									<li class="nav-item">
-										<a class="nav-link" data-toggle="tab" href="#m_tabs_list_nota">
-											Nota Telah Terbit
-										</a>
-									</li>
-								</ul>
-								<div class="tab-content">
-									<div class="tab-pane active" id="m_tabs_list_request" role="tabpanel">
-										<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-											<div class="row align-items-center">
-												<div class="col-md-12">
-													<div class="form-group m-form__group row align-items-center">
-														<div class="col-md-4">
-															<div class="m-portlet__head-title">
-																<h3 class="m-portlet__head-text">
-																	List SPK 
-																</h3>
-															</div>
-														</div>
-														<div class="col-md-4 offset-md-4">
-															<div class="m-input-icon m-input-icon--left">
-																<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-																<span class="m-input-icon__icon m-input-icon__icon--left">
-																	<span>
-																		<i class="la la-search"></i>
-																	</span>
-																</span>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<!--end: Search Form -->
-										<!--begin: Datatable -->
-										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_spk">
-											<thead>
-												<tr>
-													<th>No</th>
-													<th>Tanggal</th>
-													<th>No SPK</th>
-													<th>Nama Pelanggan</th>
-													<th>No Telpon</th>
-													<th>Aksi</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>1</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Hendy</td>
-													<td>085145322137</td>
-													<td>
-														<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>2</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>
-														<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>3</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>
-														<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>4</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Ida</td>
-													<td>085145322137</td>
-													<td>
-														<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>5</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Sry</td>
-													<td>085145322137</td>
-													<td>
-														<a href="rincian_spk_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-											</tbody>
-										</table>
-										<!--end: Datatable -->
-									</div>
-									<div class="tab-pane" id="m_tabs_list_nota" role="tabpanel">
-										<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-											<div class="row align-items-center">
-												<div class="col-md-12">
-													<div class="form-group m-form__group row align-items-center">
-														<div class="col-md-4">
-															<div class="m-portlet__head-title">
-																<h3 class="m-portlet__head-text">
-																	List Nota
-																</h3>
-															</div>
-														</div>
-														<div class="col-md-4 offset-md-4">
-															<div class="m-input-icon m-input-icon--left">
-																<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-																<span class="m-input-icon__icon m-input-icon__icon--left">
-																	<span>
-																		<i class="la la-search"></i>
-																	</span>
-																</span>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<!--end: Search Form -->
-										<!--begin: Datatable -->
-										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_nota">
-											<thead>
-												<tr>
-													<th>No</th>
-													<th>Tanggal</th>
-													<th>No Invoice</th>
-													<th>Nama Pelanggan</th>
-													<th>Alamat</th>
-													<th>Aksi</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>1.</td>
-													<td>14/05/2019</td>
-													<td>
-														0109/NSSM/MKS/III/2019
-													</td>
-													<td>PT. Sumber Agri Sehat</td>
-													<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
-													<td>
-														<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>2</td>
-													<td>14/05/2019</td>
-													<td>
-														0109/NSSM/MKS/III/2019
-													</td>
-													<td>PT. Sumber Agri Sehat</td>
-													<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
-													<td>
-														<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>3</td>
-													<td>14/05/2019</td>
-													<td>
-														0109/NSSM/MKS/III/2019
-													</td>
-													<td>PT. Sumber Agri Sehat</td>
-													<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
-													<td>
-														<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>4</td>
-													<td>14/05/2019</td>
-													<td>
-														0109/NSSM/MKS/III/2019
-													</td>
-													<td>PT. Sumber Agri Sehat</td>
-													<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
-													<td>
-														<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>5</td>
-													<td>14/05/2019</td>
-													<td>
-														0109/NSSM/MKS/III/2019
-													</td>
-													<td>PT. Sumber Agri Sehat</td>
-													<td>Jl. Dtista Raya No. 399, Jakarta Timur</td>
-													<td>
-														<a href="rincian_nota.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-											</tbody>
-										</table>
-										<!--end: Datatable -->
-									</div>
-								</div>
+								<p>Keterangan Komplain</p>
+								<textarea style="resize: none;font-size: 1.2rem" class="form-control m-input m-input--solid" name="keterangan_komplain"rows="5">Pipa Bocor dan Remote Ac tidak berfungsi</textarea>
 							</div>
 						</div>
 					</div>
@@ -591,7 +398,7 @@
 <!--end::Page Snippets -->
 <script src="http://localhost:35729/livereload.js"></script>
 <script type="text/javascript">
-	var tbl_spk = $('#tbl_spk').mDatatable({
+	var tbl_list_item_masuk = $('#tbl_rincian_spk_pemasangan').mDatatable({
 		data: {
 			saveState: {cookie: false},
 					/*type: 'remote',
@@ -634,105 +441,18 @@
 				{
 					field: 'No',
 					textAlign: 'center',
-					width: 50
+					
 				},
 				{
-					field: 'Tanggal',
-					textAlign: 'center',
-					type:'date',
-					format: 'DD/MM/YYYY',
-				},
-				{
-					field: 'No SPK',
+					field: 'Nama Barang',
 					textAlign: 'center',
 				},
 				{
-					field: 'Nama Pelanggan',
+					field: 'Jumlah',
 					textAlign: 'center',
 				},
 				{
-					field: 'No Telpon',
-					textAlign: 'center',
-				},
-				{
-					field: 'Status',
-					textAlign: 'center',
-				},
-				{
-					field: 'Aksi',
-					textAlign: 'center',
-				}
-
-				],
-			});
-		</script>
-		<script type="text/javascript">
-			var tbl_spk = $('#tbl_nota').mDatatable({
-				data: {
-					saveState: {cookie: false},
-					/*type: 'remote',
-			        source: {
-			          read: {
-			            // sample GET method
-			            method: 'GET',
-			            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
-			            map: function(raw) {
-			              // sample data mapping
-			              var dataSet = raw;
-			              if (typeof raw.data !== 'undefined') {
-			                dataSet = raw.data;
-			              }
-			              return dataSet;
-			            },
-			          },
-			        },
-			        pageSize: 10,
-			        serverPaging: true,
-			        serverFiltering: true,
-			        serverSorting: true,*/
-			    },
-				// layout definition
-				layout: {
-					theme: 'default', // datatable theme
-					class: '', // custom wrapper class
-					scroll: true, // enable/disable datatable scroll both horizontal and vertical when needed.
-					// height: 450, // datatable's body's fixed height
-					footer: false // display/hide footer
-				},
-
-				// column sorting
-				sortable: false,
-				search: {
-					input: $('#generalSearch'),
-				},
-				columns: [
-
-				{
-					field: 'No',
-					textAlign: 'center',
-					width: 50
-				},
-				{
-					field: 'Tanggal',
-					textAlign: 'center',
-					type:'date',
-					format: 'DD/MM/YYYY',
-				},
-				{
-					field: 'No Invoice',
-					textAlign: 'center',
-					width: 200
-				},
-				{
-					field: 'Nama Pelanggan',
-					textAlign: 'center',
-				},
-				{
-					field: 'Alamat',
-					textAlign: 'center',
-				},
-				{
-					field: 'Aksi',
+					field: 'Keterangan',
 					textAlign: 'center',
 				}
 
