--- a/admin toko/spk_komplain.html
+++ b/admin toko/spk_komplain.html
@@ -305,100 +305,202 @@
 					<div class="col-xl-12">
 						<div class="m-portlet m-portlet--mobile">
 							<div class="m-portlet__body">
-								<!--begin: Search Form -->
-								<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-									<div class="row align-items-center">
-										<div class="col-md-12">
-											<div class="form-group m-form__group row align-items-center">
-												<div class="col-md-4">
-													<div class="m-portlet__head-title">
-														<h3 class="m-portlet__head-text">
-															List SPK 
-														</h3>
-													</div>
-												</div>
-												<div class="col-md-4 offset-md-4">
-													<div class="m-input-icon m-input-icon--left">
-														<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-														<span class="m-input-icon__icon m-input-icon__icon--left">
-															<span>
-																<i class="la la-search"></i>
-															</span>
-														</span>
+								<ul class="nav nav-pills" role="tablist">
+									<li class="nav-item">
+										<a class="nav-link active" data-toggle="tab" href="#m_tabs_list_spk">
+											SPK
+										</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link" data-toggle="tab" href="#m_tabs_list_spk_komplain">
+											SPK Komplain 
+										</a>
+									</li>
+								</ul>
+								<div class="tab-content">
+									<div class="tab-pane active" id="m_tabs_list_spk" role="tabpanel">
+										<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+											<div class="row align-items-center">
+												<div class="col-md-12">
+													<div class="form-group m-form__group row align-items-center">
+														<div class="col-md-4">
+															<div class="m-portlet__head-title">
+																<h3 class="m-portlet__head-text">
+																	List SPK 
+																</h3>
+															</div>
+														</div>
+														<div class="col-md-4 offset-md-4">
+															<div class="m-input-icon m-input-icon--left">
+																<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+																<span class="m-input-icon__icon m-input-icon__icon--left">
+																	<span>
+																		<i class="la la-search"></i>
+																	</span>
+																</span>
+															</div>
+														</div>
 													</div>
 												</div>
 											</div>
 										</div>
+										<table class="table" id="tbl_spk">
+											<thead>
+												<tr>
+													<th>No</th>
+													<th>Tanggal</th>
+													<th>No SPK</th>
+													<th>Nama Pelanggan</th>
+													<th>No Telpon</th>
+													<th>Aksi</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>1</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Bpk. Hendy</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>2</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Bpk. Suminto</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>3</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Bpk. Suminto</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>4</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Ibu Ida</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>5</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Ibu Sry</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+									<div class="tab-pane " id="m_tabs_list_spk_komplain" role="tabpanel">
+										<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+											<div class="row align-items-center">
+												<div class="col-md-12">
+													<div class="form-group m-form__group row align-items-center">
+														<div class="col-md-4">
+															<div class="m-portlet__head-title">
+																<h3 class="m-portlet__head-text">
+																	List SPK Komplain
+																</h3>
+															</div>
+														</div>
+														<div class="col-md-4 offset-md-4">
+															<div class="m-input-icon m-input-icon--left">
+																<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+																<span class="m-input-icon__icon m-input-icon__icon--left">
+																	<span>
+																		<i class="la la-search"></i>
+																	</span>
+																</span>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<table class="table" id="tbl_list_komplain">
+											<thead>
+												<tr>
+													<th>No</th>
+													<th>Tanggal</th>
+													<th>No SPK</th>
+													<th>Nama Pelanggan</th>
+													<th>No Telpon</th>
+													<th>Aksi</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>1</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Bpk. Hendy</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>2</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Bpk. Suminto</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>3</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Bpk. Suminto</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>4</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Ibu Ida</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>5</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Ibu Sry</td>
+													<td>085145322137</td>
+													<td>
+														<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+											</tbody>
+										</table>
 									</div>
 								</div>
-								<!--end: Search Form -->
-								<!--begin: Datatable -->
-								<!-- <div class="m_datatable" id="local_data"></div> -->
-								<table class="table" id="tbl_spk">
-									<thead>
-										<tr>
-											<th>No</th>
-											<th>Tanggal</th>
-											<th>No SPK</th>
-											<th>Nama Pelanggan</th>
-											<th>No Telpon</th>
-											<th>Aksi</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>1</td>
-											<td>20/19/2018</td>
-											<td>1923102301</td>
-											<td>Bpk. Hendy</td>
-											<td>085145322137</td>
-											<td>
-												<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-										<tr>
-											<td>2</td>
-											<td>20/19/2018</td>
-											<td>1923102301</td>
-											<td>Bpk. Suminto</td>
-											<td>085145322137</td>
-											<td>
-												<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-										<tr>
-											<td>3</td>
-											<td>20/19/2018</td>
-											<td>1923102301</td>
-											<td>Bpk. Suminto</td>
-											<td>085145322137</td>
-											<td>
-												<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-										<tr>
-											<td>4</td>
-											<td>20/19/2018</td>
-											<td>1923102301</td>
-											<td>Ibu Ida</td>
-											<td>085145322137</td>
-											<td>
-												<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-										<tr>
-											<td>5</td>
-											<td>20/19/2018</td>
-											<td>1923102301</td>
-											<td>Ibu Sry</td>
-											<td>085145322137</td>
-											<td>
-												<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-								<!--end: Datatable -->
 							</div>
 						</div>
 					</div>
@@ -443,6 +545,82 @@
 <script src="http://localhost:35729/livereload.js"></script>
 <script type="text/javascript">
 	var tbl_spk = $('#tbl_spk').mDatatable({
+		data: {
+			saveState: {cookie: false},
+					/*type: 'remote',
+			        source: {
+			          read: {
+			            // sample GET method
+			            method: 'GET',
+			            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
+			            map: function(raw) {
+			              // sample data mapping
+			              var dataSet = raw;
+			              if (typeof raw.data !== 'undefined') {
+			                dataSet = raw.data;
+			              }
+			              return dataSet;
+			            },
+			          },
+			        },
+			        pageSize: 10,
+			        serverPaging: true,
+			        serverFiltering: true,
+			        serverSorting: true,*/
+			    },
+				// layout definition
+				layout: {
+					theme: 'default', // datatable theme
+					class: '', // custom wrapper class
+					scroll: true, // enable/disable datatable scroll both horizontal and vertical when needed.
+					// height: 450, // datatable's body's fixed height
+					footer: false // display/hide footer
+				},
+
+				// column sorting
+				sortable: false,
+				search: {
+					input: $('#generalSearch'),
+				},
+				columns: [
+
+				{
+					field: 'No',
+					textAlign: 'center',
+					width: 50
+				},
+				{
+					field: 'Tanggal',
+					textAlign: 'center',
+					type:'date',
+					format: 'DD/MM/YYYY',
+				},
+				{
+					field: 'No SPK',
+					textAlign: 'center',
+				},
+				{
+					field: 'Nama Pelanggan',
+					textAlign: 'center',
+				},
+				{
+					field: 'No Telpon',
+					textAlign: 'center',
+				},
+				{
+					field: 'Status',
+					textAlign: 'center',
+				},
+				{
+					field: 'Aksi',
+					textAlign: 'center',
+				}
+
+				],
+			});
+		</script>
+		<script type="text/javascript">
+	var tbl_list_komplain = $('#tbl_list_komplain').mDatatable({
 		data: {
 			saveState: {cookie: false},
 					/*type: 'remote',
